@@ -2,6 +2,11 @@
 = rufus-tokyo CHANGELOG.txt
 
 
+== rufus-tokyo - 1.0.4    not yet released
+
+- todo  : Rufus::Tokyo::Tyrant and TyrantTable now reconnets (120 seconds)
+
+
 == rufus-tokyo - 1.0.3    released 2009/11/16
 
 - bug   : newer versions of FFI have [undocumented] bool type. Adapted.
